[gd_scene load_steps=2 format=3 uid="uid://dfq0y6ar3o3x3"]

[ext_resource type="Script" uid="uid://b8x1al48r32sd" path="res://src/tooltip/seed_tooltip.gd" id="1_3e8vv"]

[node name="SeedTooltipContainer" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_3e8vv")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Wheat"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="GenomesContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/GenomesContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="GenomeContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/GenomesContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/GenomesContainer/MarginContainer/GenomeContainer"]
layout_mode = 2
text = "Dominant Gene"
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer/GenomesContainer/MarginContainer/GenomeContainer"]
layout_mode = 2

[node name="GenomePart" type="HBoxContainer" parent="MarginContainer/VBoxContainer/GenomesContainer/MarginContainer/GenomeContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/GenomesContainer/MarginContainer/GenomeContainer/GenomePart"]
layout_mode = 2
text = "Speed: "

[node name="DSpeedLabel" type="Label" parent="MarginContainer/VBoxContainer/GenomesContainer/MarginContainer/GenomeContainer/GenomePart"]
unique_name_in_owner = true
layout_mode = 2
text = "1"

[node name="GenomePart2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/GenomesContainer/MarginContainer/GenomeContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/GenomesContainer/MarginContainer/GenomeContainer/GenomePart2"]
layout_mode = 2
text = "Bounty: "

[node name="DBountyLabel" type="Label" parent="MarginContainer/VBoxContainer/GenomesContainer/MarginContainer/GenomeContainer/GenomePart2"]
unique_name_in_owner = true
layout_mode = 2
text = "1"

[node name="GenomePart3" type="HBoxContainer" parent="MarginContainer/VBoxContainer/GenomesContainer/MarginContainer/GenomeContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/GenomesContainer/MarginContainer/GenomeContainer/GenomePart3"]
layout_mode = 2
text = "Mutability: "

[node name="DMutabilityLabel" type="Label" parent="MarginContainer/VBoxContainer/GenomesContainer/MarginContainer/GenomeContainer/GenomePart3"]
unique_name_in_owner = true
layout_mode = 2
text = "1"

[node name="VSeparator" type="VSeparator" parent="MarginContainer/VBoxContainer/GenomesContainer"]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/GenomesContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="GenomeContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/GenomesContainer/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/GenomesContainer/MarginContainer2/GenomeContainer"]
layout_mode = 2
text = "Recessive Gene"
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer/GenomesContainer/MarginContainer2/GenomeContainer"]
layout_mode = 2

[node name="GenomePart" type="HBoxContainer" parent="MarginContainer/VBoxContainer/GenomesContainer/MarginContainer2/GenomeContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/GenomesContainer/MarginContainer2/GenomeContainer/GenomePart"]
layout_mode = 2
text = "Speed: "

[node name="RSpeedLabel" type="Label" parent="MarginContainer/VBoxContainer/GenomesContainer/MarginContainer2/GenomeContainer/GenomePart"]
unique_name_in_owner = true
layout_mode = 2
text = "1"

[node name="GenomePart2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/GenomesContainer/MarginContainer2/GenomeContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/GenomesContainer/MarginContainer2/GenomeContainer/GenomePart2"]
layout_mode = 2
text = "Bounty: "

[node name="RBountyLabel" type="Label" parent="MarginContainer/VBoxContainer/GenomesContainer/MarginContainer2/GenomeContainer/GenomePart2"]
unique_name_in_owner = true
layout_mode = 2
text = "1"

[node name="GenomePart3" type="HBoxContainer" parent="MarginContainer/VBoxContainer/GenomesContainer/MarginContainer2/GenomeContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
alignment = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/GenomesContainer/MarginContainer2/GenomeContainer/GenomePart3"]
layout_mode = 2
text = "Mutability: "

[node name="RMutabilityLabel" type="Label" parent="MarginContainer/VBoxContainer/GenomesContainer/MarginContainer2/GenomeContainer/GenomePart3"]
unique_name_in_owner = true
layout_mode = 2
text = "1"
